compilateurDeca/src/test/deca/codegen/valid/avec_objet/recursion_min.deca
// Description:
//    Somme alternée récursive (n - f(n-1))
// Resultats:
//    Resultat: 5
// Historique:
//    cree le 18/01/2026
class MinusRecursion {
    int alternate(int n) {
        if (n <= 0) {
            return 0;
        }
        return n - alternate(n - 1);
    }
}
{
    MinusRecursion m = new MinusRecursion();
    // 10 - (9 - (8 - (7 - (6 - (5 - (4 - (3 - (2 - (1 - 0))))))))) = 5
    println("Resultat: ", m.alternate(10));
}
