compilateurDeca/src/test/deca/codegen/invalid/sans_objet/chainage.deca
// Description:
//    Erreur a l'execution : debordement de tas - liste chainee
//
// Resultats:
//    Erreur : tas plein
//
// Historique:
//    cree le 10/01/2026
class Node {
    Node next;
    int value;
}
{
    Node head = new Node();
    Node n;
    head.value = 0;

    while (true) {
        n = new Node();
        n.value = 1;
        n.next = head;
        head = n;
    }
}
